<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lt.andro.smsbomber.MainActivity$PlaceholderFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTextPhoneNumber"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/phone_number_text"
        android:hint="@string/phone_number_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextCount"
        android:layout_row="1"
        android:layout_column="0"
        android:hint="@string/count_hint"
        android:text="@string/count_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextMessage"
        android:layout_row="2"
        android:layout_column="0"
        android:hint="@string/message_hint"
        android:text="@string/message_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send_text"
        android:id="@+id/buttonSend"
        android:layout_row="3"
        android:layout_column="1" />

</GridLayout>